Switched to variable font and added swap rule to prevent invisible flash of text

--- a/_scss/font.scss
+++ b/_scss/font.scss
@@ -1,6 +1,12 @@
 @charset 'utf-8';
 
-html { 
+html {
+    @supports (font-variation-settings: normal) {
+        font-family: 'Inter var experimental', sans-serif;
+        font-variation-settings: 'wght' 500;
+        font-style: normal;
+    }
+    font-display: swap;
     font-family: 'Inter', sans-serif;
     color: #000;
 }
